spade-tests/src/snapshots/spade_tests__hir_lowering__tests__wal_trace_on_enum_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
enum T { }
entity main(x: T) -> T {
    #[wal_trace]
    let y = x;
    x
}


error: #[wal_trace] can only be applied to values of struct type
  ┌─ testinput:3:5
  │
3 │     #[wal_trace]
  │     ^^^^^^^^^^^^ #[wal_trace] on enum
4 │     let y = x;
  │         - This has type T which is enum


